--- a/milestone 3/index.html
+++ b/milestone 3/index.html
@@ -8,16 +8,16 @@
     <title>Document</title>
     <!-- BOOTSTRAP LINK -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <!-- CSS CUSTOM -->
     <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
 
-    <div class="wrapper container">
-        <h1 class="text-center text-white fs-3 my-3">FIZZBUZZDOM</h1>
-        <div class="d-flex flex-wrap">
+    <div class="wrapper ms_container ">
+        <h1 class="text-center text-white py-3">FizzBuzzDOM</h1>
+        <div class="wrapper2 d-flex flex-wrap gap-3 align-items-center">
             <!-- <div class="box">1</div>
             <div class="box">2</div>
             <div class="box">3</div>
