--- a/milestone 2/index.html
+++ b/milestone 2/index.html
@@ -8,7 +8,7 @@
     <title>Document</title>
     <!-- BOOTSTRAP LINK -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+        integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <!-- CSS CUSTOM -->
     <link rel="stylesheet" href="css/style.css">
 </head>
@@ -28,6 +28,7 @@
             <div class="box">8</div>
             <div class="box">9</div>
             <div class="box">10</div> -->
+            <h2>bau</h2>
         </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
